--- a/app/modules/warranty/locales/de.json
+++ b/app/modules/warranty/locales/de.json
@@ -1,25 +1,25 @@
 {
+    "age": "Hardware-Alter",
     "coverage": "Garantieabdeckung",
     "est_manufacture_date": "ungef. Produktionsdatum",
     "est_purchase_date": "ungef. Kaufdatum",
     "expired": "Abgelaufen am __date__",
+    "expires": "Garantie läuft ab",
     "expires_in": "Läuft ab __date__",
     "installed_memory_title": "Installierter Speicher",
     "no_alerts": "Keine Garantiewarnung",
+    "purchased": "Gekauft",
     "recheck": "Garantieabdeckung erneut prüfen",
+    "report": "Garantie-Report",
+    "status": "Garantiestatus",
     "supported_no_applecare": "Unterstützt bis __date__. Kein Applecare",
     "supported_until": "Unterstützt bis __date__",
     "unregistered": "Nicht registriert",
     "warranty": "Garantie",
-    "widget_title": "Hardwaregarantie",
-    "report": "Garantie-Report",
-    "purchased": "Gekauft",
-    "expires": "Garantie läuft ab",
     "warrantysupport": {
-      "title": "Anzahl Unterstützt, Vintage, Obsolet und Unbekannter Support-Status",
-      "warrantyinfo": "Anzahl Unterstützt, Vintage, Obsolet und Unbekannter Support-Status",
-      "warrentysupportstatus": "Garantieabdeckungsstatus"
-  },
-    "status": "Garantie",
-    "age": "Hardware-Alter"
+        "title": "Anzahl Unterstützt, Vintage, Obsolet und Unbekannter Support-Status",
+        "warrantyinfo": "Anzahl Unterstützt, Vintage, Obsolet und Unbekannter Support-Status",
+        "warrentysupportstatus": "Garantieabdeckungsstatus"
+    },
+    "widget_title": "Hardwaregarantie"
 }
