--- a/app/modules/wifi/locales/en.json
+++ b/app/modules/wifi/locales/en.json
@@ -3,8 +3,8 @@
     "bssid": "BSSID",
     "channel": "Channel",
     "extrssi": "External RSSI",
-    "lasttrx": "Last Transmit Rate (Mbps)",
-    "maxtrx": "Maximum Transmit Rate (Mbps)",
+    "lasttrx": "Last Transmit Rate",
+    "maxtrx": "Maximum Transmit Rate",
     "networks": "WiFi Networks",
     "noise": "Noise Level",
     "nonetworks": "No Networks",
@@ -19,12 +19,35 @@
         "apmode": "AP Mode",
         "authtype": "802.11X Auth Type",
         "channel": "Channel",
-        "lasttx": "Last Tx Rate (Mbps)",
+        "lasttx": "Last Tx Rate",
         "linkauthtype": "Link Auth Type",
-        "maxtx": "Max Tx Rate (Mbps)",
+        "maxtx": "Max Tx Rate",
         "noise": "Noise",
         "state": "WiFi State"
     },
     "wifi": "WiFi",
+    "station": "Station",
+    "open": "Open",
+    "none": "None",
+    "802.1x": "802.1X",
+    "leap": "LEAP",
+    "wps": "WPS",
+    "wep": "WEP",
+    "wpa": "WPA",
+    "wpa_psk": "WPA-PSK",
+    "wpa2_psk": "WPA2-PSK",
+    "wpa2": "WPA2",
+    "running": "Connected",
+    "off": "Off",
+    "snr": "Signal to Noise Ratio",
+    "off_client_tab": "Wi-Fi is turned off",
+    "no_wifi": "No Wi-Fi",
+    "no_wifi_client_tab": "No Wi-Fi hardware installed",
+    "init": "Not Connected",
+    "sharing": "Sharing",
+    "unknown": "Unknown",
+    "snr_detail": "Signal to Noise Ratio - 0db to 120db - higher is better",
+    "noise_detail": "0db to -120db - closer to 0 is better",
+    "rssi_detail": "Recieved Signal Strength Indicator - 0db to -120db - closer to 0 is better",
     "report": "Wifi Report"
 }
