--- a/app/modules/inventory/locales/fr.json
+++ b/app/modules/inventory/locales/fr.json
@@ -2,7 +2,8 @@
     "app": {
         "versions": "Versions connues du __app__"
     },
-    "report": "Inventaire",
+    "appversions_report": "Versions des Apps",
+    "inventory_items": "Objets dans l'inventaire",
     "listing": "Inventaire",
-    "appversions_report": "Versions des Apps"
+    "report": "Inventaire"
 }
