Add locale for inventory tab

--- a/app/modules/inventory/locales/en.json
+++ b/app/modules/inventory/locales/en.json
@@ -1,8 +1,9 @@
 {
-    "app": {
-        "versions": "Known versions of __app__"
-    },
-    "report": "Inventory Report",
-    "listing": "Inventory",
-    "appversions_report": "App Versions Report"
+  "app": {
+    "versions": "Known versions of __app__"
+  },
+  "appversions_report": "App Versions Report",
+  "inventory_items": "Inventory Items",
+  "listing": "Inventory",
+  "report": "Inventory Report"
 }
