--- a/app/modules/inventory/locales/fr.json
+++ b/app/modules/inventory/locales/fr.json
@@ -1,8 +1,9 @@
 {
-    "app": {
-        "versions": "Versions connues du __app__"
-    },
-    "report": "Inventaire",
-    "listing": "Inventaire",
-    "appversions_report": "Versions des Apps"
+  "app": {
+    "versions": "Versions connues du __app__"
+  },
+  "appversions_report": "Versions des Apps",
+  "inventory_items": "Objets dans l'inventaire",
+  "listing": "Inventaire",
+  "report": "Inventaire"
 }
