Hardware listing localization fix.

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -260,6 +260,9 @@
             "listings": "Listings",
             "reports": "Reports"
         },
+        "reports": {
+            "hardware": "Hardware"
+        },
         "user": {
             "logout": "Sign Off"
         }
