--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -257,6 +257,9 @@
             "listings": "Listings",
             "reports": "Rapports"
         },
+        "reports": {
+            "hardware": "Matériel",
+        },
         "user": {
             "logout": "Se déconnecter"
         }
