Added "Report" to match existing listings.

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -258,7 +258,7 @@
             "reports": "Reports"
         },
         "reports": {
-            "hardware": "Hardware"
+            "hardware": "Hardware Report"
         },
         "user": {
             "logout": "Abmelden"
