--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -258,7 +258,7 @@
             "reports": "Rapports"
         },
         "reports": {
-            "hardware": "Matériel",
+            "hardware": "Matériel Rapport",
         },
         "user": {
             "logout": "Se déconnecter"
