Fixed disk_type_widget links. Changed title to reflect storage.

--- a/app/modules/disk_report/locales/en.json
+++ b/app/modules/disk_report/locales/en.json
@@ -17,10 +17,10 @@
     "smartstatus_failing": "SMART Status failing",
     "ssd": "SSD",
     "storage": "Storage",
+    "storage_type": "Storage Type",
     "total_size": "Size",
     "type": "Storage Type",
     "used": "Used",
-    "volume_type": "Volume Type",
     "report": "Storage Report",
     "filevault_widget_title": "FileVault 2 Status"
 }
