No need to destroy existing data. Restored Volume Type

--- a/app/modules/disk_report/locales/en.json
+++ b/app/modules/disk_report/locales/en.json
@@ -20,6 +20,7 @@
     "total_size": "Size",
     "type": "Storage Type",
     "used": "Used",
+    "volume_type": "Volume Type",
     "report": "Storage Report",
     "filevault_widget_title": "FileVault 2 Status"
 }
