--- a/app/modules/disk_report/locales/fr.json
+++ b/app/modules/disk_report/locales/fr.json
@@ -15,6 +15,7 @@
     "total_size": "Taille",
     "type": "Type de stockage",
     "used": "Utilisé",
+    "volume_type": "Type de Volume",
     "report": "Rapport Stockage",
     "filevault_widget_title": "État Filevault 2"
 }
