Fixed caching widget localization

--- a/app/modules/caching/locales/en.json
+++ b/app/modules/caching/locales/en.json
@@ -15,6 +15,9 @@
     "client_requests": "Requests From Clients",
     "client_tab_title": "Caching Server",
     "date": "Date",
+    "from_cache": "From Cache",
+    "from_origin": "From Origin",
+    "from_peers": "From Peers",
     "importsbyhttp": "Imports by HTTP",
     "importsbyxpc": "Imports by XPC",
     "listing_title": "Caching",
