Fix Directory Services listing

--- a/app/modules/directory_service/locales/en.json
+++ b/app/modules/directory_service/locales/en.json
@@ -1,8 +1,15 @@
 {
+    "ad_domain": "AD Domain",
+    "ad_comments": "AD Comments",
     "bound": "Bound",
+    "admin_groups": "Allowed Admin Groups",
+    "networkprotocol": "Network Protocol",
+    "computeraccount": "Computer Account",
+    "mobileaccount": "Mobile Account",
     "notbound": "Not Bound",
     "info": "Totals since this data is being collected",
     "bound_title": "Bound to a Directory Service",
+    "boundstatus": "Bound Staus",
     "clienttabtitle": "Directory Service",
     "which_directory_service": "Directory Service Used",
     "directory_service_comments": "Active Directory Comments",
