Pluralized batteries listing

--- a/app/modules/power/locales/en.json
+++ b/app/modules/power/locales/en.json
@@ -17,6 +17,7 @@
     "avgtimetoempty": "Estimated Average Time To Empty",
     "avgtimetofull": "Average Time to Full",
     "backgroundtask": "Background Task",
+    "batteries": "Batteries",
     "battery": "Battery",
     "battery_level": "Battery Level",
     "battery_power": "Battery Power",
