--- a/app/modules/directory_service/locales/en.json
+++ b/app/modules/directory_service/locales/en.json
@@ -1,38 +1,40 @@
 {
-    "bound": "Bound",
-    "notbound": "Not Bound",
-    "info": "Totals since this data is being collected",
-    "bound_title": "Bound to a Directory Service",
-    "clienttabtitle": "Directory Service",
-    "which_directory_service": "Directory Service Used",
-    "directory_service_comments": "Active Directory Comments",
-    "adforest": "Active Directory Forest",
     "addomain": "Active Directory Domain",
+    "adforest": "Active Directory Forest",
+    "administrative": "Advanced Options - Administrative",
+    "allowedadmingroups": "Allowed Admin Groups",
+    "authenticationfromanydomain": "Authentication From Any Domain",
+    "boundstatus": "Status",
+    "bound_title": "Bound to a Directory Service",
+    "bound": "Bound",
+    "clienttabtitle": "Directory Service",
     "computeraccount": "Computer Account",
-    "user_experience": "Advanced Options - User Experience",
     "createmobileaccount": "Create Mobile Account at Login",
-    "requireconfirmation": "Require Confirmation",
-    "forcehomeinstartup": "Force Home to Startup Disk",
-    "mounthomeassharepoint": "Mount Home as Sharepoint",
-    "usewindowsuncpathforhome": "Use Windows UNC Path for Home",
-    "networkprotocoltobeused": "Network Protocol to be Used",
     "defaultusershell": "Default User Shell",
+    "directory_service_comments": "Active Directory Comments",
+    "forcehomeinstartup": "Force Home to Startup Disk",
+    "generatekerberosauth": "Generate Kerberos Authority",
+    "info": "Totals since this data is being collected",
+    "mappinggroupgidtoattr": "Mapping Group GID to Attribute",
     "mappings": "Advanced Options - Mappings",
     "mappinguidtoattribute": "Mapping UID to Attribute",
     "mappingusergidtoattribute": "Mapping User GID to Attribute",
-    "mappinggroupgidtoattr": "Mapping Group GID to Attribute",
-    "generatekerberosauth": "Generate Kerberos Authority",
-    "administrative": "Advanced Options - Administrative",
-    "preferreddomaincontroller": "Preferred Domain Controller",
-    "allowedadmingroups": "Allowed Admin Groups",
-    "authenticationfromanydomain": "Authentication From Any Domain",
-    "packetsigning": "Packet Signing",
-    "packetencryption": "Packet Encryption",
-    "passwordchangeinterval": "Password Change Interval",
-    "restrictdynamicdnsupdates": "Restrict Dynamic DNS Updates",
-    "namespacemode": "Namespace Mode",
     "modified_computernames_title": "Not Matching AD Names",
     "modified_computernames_tooltip": "Computers where the computer name doesn't match the AD name",
-    "title": "Directory Services",
+    "mounthomeassharepoint": "Mount Home as Sharepoint",
+    "namespacemode": "Namespace Mode",
+    "networkprotocoltobeused": "Network Protocol to be Used",
+    "notbound": "Not Bound",
+    "packetencryption": "Packet Encryption",
+    "packetsigning": "Packet Signing",
+    "passwordchangeinterval": "Password Change Interval",
+    "preferreddomaincontroller": "Preferred Domain Controller",
     "report": "Directory Services Report"
+    "requireconfirmation": "Require Confirmation",
+    "restrictdynamicdnsupdates": "Restrict Dynamic DNS Updates",
+    "title": "Directory Services",
+    "user_experience": "Advanced Options - User Experience",
+    "usewindowsuncpathforhome": "Use Windows UNC Path for Home",
+    "which_directory_service": "Directory Service Used",
 }
+
