Fixed widget title

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -205,7 +205,7 @@
         },
         "hardware": "Hardware",
         "hardware_report": "Hardware Report",
-        "hardware_type_title": "Hardware Type breakdown",
+        "hardware_type_title": "Hardware Type Breakdown",
         "hardware_widget_title": "Hardware Model Breakdown",
         "memory": {
             "title": "Memory Breakdown"
