Add drive number to SMART Stats listing
by request of @poundbangbash

--- a/app/modules/smart_stats/locales/en.json
+++ b/app/modules/smart_stats/locales/en.json
@@ -1,6 +1,7 @@
 {
     "clienttabtitle": "SMART Stats",
     "reporttitle": "SMART Stats Report",
+    "disk_number": "Drive Number",
     "timestamp": "SMART Data Last Pulled",
     "raw_read_error_rate": "Raw Read Error Rate",
     "throughput_performance": "Throughput Performance",
