--- a/app/modules/certificate/locales/fr.json
+++ b/app/modules/certificate/locales/fr.json
@@ -2,6 +2,7 @@
     "commonname": "Nom commun",
     "expired": "Expiré",
     "expires": "Expire",
+    "issuer": "Issuer",
     "ok": "Valable pour plus de trois mois",
     "report_title": "Rapport Certificats",
     "soon": "Expire dans les trois mois",
