--- a/app/modules/certificate/locales/en.json
+++ b/app/modules/certificate/locales/en.json
@@ -2,6 +2,7 @@
     "commonname": "Common Name",
     "expired": "Expired",
     "expires": "Expires",
+    "issuer": "Issuer",
     "ok": "Valid for more than three months",
     "report_title": "Certificate Report",
     "soon": "Expires within three months",
