Added raw expiration date

--- a/app/modules/certificate/locales/de.json
+++ b/app/modules/certificate/locales/de.json
@@ -1,5 +1,6 @@
 {
     "commonname": "Common Name",
+    "expiration_date": "Expiration Date",
     "expired": "Abgelaufen",
     "expires": "Ablaufdatum",
     "issuer": "Issuer",
