--- a/app/modules/certificate/locales/fr.json
+++ b/app/modules/certificate/locales/fr.json
@@ -5,6 +5,7 @@
     "expiration_date": "Expiration Date",
     "expires": "Expire",
     "issuer": "Issuer",
+    "location": "Location",
     "nocertificate": "No Certificate",
     "ok": "Valable pour plus de trois mois",
     "report_title": "Rapport Certificats",
