--- a/app/modules/munkiinfo/locales/en.json
+++ b/app/modules/munkiinfo/locales/en.json
@@ -1,6 +1,7 @@
 {
     "applecatalog": "Apple Catalog URL",
     "duration": "Duration",
+    "listing": "Munki Info",
     "localonlymanifest": "Local Only Manifest",
     "manifest": "Manifest",
     "munkiprotocol": {
@@ -10,6 +11,8 @@
         "title": "Munki Protocol",
         "tooltip": "Munki protocol among all clients"
     },
+    "protocol": "Protocol",
+    "reporttitle": "Munki Info",
     "softwarerepourl": "Software Repo URL",
     "start": "Start"
 }
