--- a/app/modules/power/locales/en.json
+++ b/app/modules/power/locales/en.json
@@ -46,7 +46,7 @@
     "displaysleep": "Display Sleep",
     "externalconnected": "Power Adapter Connected",
     "externalmedia": "External Media",
-    "family_code": "Adaptr Family Code",
+    "family_code": "Adapter Family Code",
     "fullycharged": "Fully Charged",
     "general_info": "General Information",
     "gpuswitch": "GPU",
